kustomization/components/traefik/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: traefik
  template:
    metadata:
      labels:
        app.kubernetes.io/name: traefik
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app.kubernetes.io/name
                    operator: In
                    values:
                      - traefik
              topologyKey: kubernetes.io/hostname
      serviceAccountName: traefik-ingress-controller
      containers:
        - name: traefik
          image: traefik
          args:
            - --accesslog
            - --accesslog.filepath=/shared-logs/access.log
            - --accesslog.format=json
            - --api.dashboard=true
            - --api.insecure=true
            - --entrypoints.metrics.address=:9090
            - --entrypoints.mqtts.address=:8883
            - --entrypoints.web.address=:80
            - --entrypoints.web.http.redirections.entrypoint.scheme=https
            - --entrypoints.web.http.redirections.entrypoint.to=websecure
            - --entrypoints.websecure.address=:443
            - --global.checknewversion=false
            - --metrics.prometheus=true
            - --metrics.prometheus.entryPoint=metrics
            - --providers.file.filename=/config/traefik.yml
            - --providers.kubernetescrd
            - --providers.kubernetescrd.allowCrossNamespace=true
            - --providers.kubernetesingress=true
          ports:
            - name: web
              containerPort: 80
            - name: websecure
              containerPort: 443
            - name: dashboard
              containerPort: 8080
            - name: mqtts
              containerPort: 8883
            - name: metrics
              containerPort: 9090
          volumeMounts:
            - mountPath: /shared-logs
              name: shared-logs
            - name: traefik-config
              mountPath: /config
              readOnly: true
            - name: wildcard-hogs-tswn-us
              mountPath: /certs/wildcard-hogs-tswn-us
              readOnly: true
            - name: wildcard-tswn-us
              mountPath: /certs/wildcard-tswn-us
              readOnly: true
        - name: vector
          volumeMounts:
            - mountPath: /shared-logs
              name: shared-logs
              readOnly: true
      priorityClassName: system-cluster-critical
      volumes:
        - emptyDir: {}
          name: shared-logs
        - configMap:
            name: traefik-config
          name: traefik-config
        - name: wildcard-hogs-tswn-us
          secret:
            secretName: wildcard-hogs-tswn-us-secret
        - name: wildcard-tswn-us
          secret:
            secretName: wildcard-tswn-us-secret
