kustomization/components/traefik/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard-svc
spec:
  ports:
    - protocol: TCP
      name: admin
      port: 8080
      targetPort: dashboard
  selector:
    app.kubernetes.io/name: traefik
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-svc
spec:
  externalTrafficPolicy: Local
  ports:
    - name: imapsecure
      protocol: TCP
      port: 993
    - name: mqtts
      protocol: TCP
      port: 8883
    - name: smtpsecure
      protocol: TCP
      port: 465
    - name: web
      protocol: TCP
      port: 80
    - name: websecure
      protocol: TCP
      port: 443
    - name: websecure-ext
      protocol: TCP
      port: 8443
  selector:
    app.kubernetes.io/name: traefik
  type: LoadBalancer
