kustomization/components/traefik/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
  name: traefik-dashboard-ingress
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: traefik-dashboard-svc
                port:
                  number: 8080
            path: /
            pathType: Prefix
